--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-datavalidator",
   "description": "Data Validator service for minimalism",
-  "version": "1.0.5",
+  "version": "1.1.0-beta1",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "stable",
+  "minimum-stability": "beta",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -23,6 +23,7 @@
   "require": {
     "php": ">=8.1",
     "carlonicora/jsonapi": "~3",
-    "carlonicora/minimalism": "~13.0"
+    "carlonicora/minimalism": "~13.0",
+    "carlonicora/minimalism-interface-sql": "~1.0"
   }
 }
